# JWS-Config

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  configure.ac  jws-config.desktop
pixmaps/: Makefile.am
src/: Makefile.am  jwsconfigapplication.c  jwsconfigapplication.h  jwsconfigimageviewer.c  jwsconfigimageviewer.h  jwsconfigwindow.c  jwsconfigwindow.h  jwsinfo.c  jwsinfo.h  jwssetter.c  jwssetter.h  main.c
src/resources/: jwsconfig.gresource.xml
src/resources/ui/: imageviewer.ui  jwswindow.ui
